--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "start": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@img-comparison-slider/vue": "^3.0.4",
+    "@img-comparison-slider/vue": "^7.3.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
